[gd_scene load_steps=2 format=3 uid="uid://dx2js8tmcwrf8"]

[ext_resource type="Script" uid="uid://bygpjkcphydbr" path="res://source/pages/load_menu/scripts/load_menu.gd" id="1_6mtqk"]

[node name="LoadMenu" type="CenterContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_6mtqk")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "load game"

[node name="Button" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "slot 1"

[node name="Button2" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "slot 2"

[node name="Button3" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "slot 3"
